--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cucumber/cucumber": "7.3.1",
     "bluebird": "^3.7.2",
+    "cheerio": "^1.0.0-rc.10",
     "chromedriver": "^96.0.0",
+    "node-fetch": "^3.1.1",
     "selenium-webdriver": "^4.1.0",
-    "xlsx": "^0.17.4",
-    "@cucumber/cucumber": "7.3.1"
+    "xlsx": "^0.17.4"
   }
 }
